sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:5: error: not found: value v
  i=v
    ^AlgInsertionSort:7: error: not found: value v
    while(i < v){
              ^AlgInsertionSort:8: error: not found: value v
      if(i-1<v){
             ^