sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var lgr:Int=getNombreValeurs()
  var i:Int=0
  i=v
  for (i <- 1 to lgr-1){
    while(i < v){
      if(i-1<v){
        echange(i-1,i)
      }
    }
  }
  
}